src/main/java/com/example/test/error/exception/UnAuthorizedException.java
package com.example.test.error.exception;

import com.example.test.error.ErrorCode;

public class UnAuthorizedException extends BusinessException {

    public UnAuthorizedException(String message, ErrorCode errorCode) {
        super(message, errorCode);
    }
}
